more robust response structure
commit db49280cb1b84c79618a3c89d6df5ed61b0e01de
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 17:47:43 2014 +1000

    tidy

commit 6ad30de801963fcbb308ebf3d548390138a40915
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 17:35:40 2014 +1000

    now using directory directly rather than rewrite rule

commit 107741f957a8b7acd72fab1c41536f1c55688f1d
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 17:27:51 2014 +1000

    update

commit 53ea554b0df076ce963a834eba6948c8f2ca367f
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 17:25:34 2014 +1000

    static file server is now a class

commit 48c26776f14c4e5a8c01eb2e62226eb45cdc9a02
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 17:20:04 2014 +1000

    update

commit 9c2c53e9cb1fd6b3579942400d724ed2fbfe7601
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 17:19:56 2014 +1000

    update

commit 9d62a77cc0133d993d0e1bf305332373f1a4d1d4
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 17:13:52 2014 +1000

    ok file stuff is working

commit 697b97f62bf1eb984299e64c5055f471ba1ee1f6
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 17:08:12 2014 +1000

    update

commit 34e81e3877062184c121071f6a24852180edd1de
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 17:06:47 2014 +1000

    now using result to serve files

commit e8c44ddb572319363e5354ac9ab7f6c177dbfac5
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 16:57:27 2014 +1000

    update

commit bffeee3aabd59c60420fbdf6de5a70935125174b
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 16:52:19 2014 +1000

    update

commit f9188cea3b93c6ea945775e52569ca2629ff9a17
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 16:24:38 2014 +1000

    update

commit b7332f8f75270c901ff50e0dc1c24232414e05ee
Author: julian1 <julian.atkinson71@gmail.com>
Date:   Thu Oct 2 16

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Whoot test </title>
-    <link href="layout.css" rel="stylesheet" type="text/css">
+    <!--link href="layout.css" rel="stylesheet" type="text/css"-->
     <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="../excanvas.min.js"></script><![endif]-->
     <script language="javascript" type="text/javascript" src="jquery.js"></script>
     <script language="javascript" type="text/javascript" src="jquery.flot.js"></script>
@@ -120,7 +120,7 @@ $(function () {
 
 					$.ajax({
 						dataType: "json",
-						url: "out.json",
+						url: "get_series.json",
 						//data: "whoot",
 						success: function ( datax, textStatus, jqXHR ) { 
 							console.log( 'whoot got data' ); 
