--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Whoot test </title>
+    <title>Whoot test 1</title>
     <!--link href="layout.css" rel="stylesheet" type="text/css"-->
     <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="../excanvas.min.js"></script><![endif]-->
     <script language="javascript" type="text/javascript" src="jquery.js"></script>
@@ -65,10 +65,10 @@ $(function () {
 
 				yaxes: [
 					{
-						position: "left"
+						position: "right"
 					}, 
 					{
-						position: "right"
+						position: "left"
 					} 
 					],  
 
