--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,10 @@
     <script language="javascript" type="text/javascript" src="jquery.flot.js"></script>
  </head>
     <body>
-    <h1>Whoot test</h1>
+
+    <h2>Home</h2>
+
+	<a href="/report.html">report</a> 
 
     <div id="mytime" style="width:100px;height:30px;"></div>
 
