--- a/static/report.html
+++ b/static/report.html
@@ -12,7 +12,7 @@
 </script>
 
     <body>
-    <h2>Reports</h2>
+    <h2>Report</h2>
 
 	<a href="/index.html">home</a> 
 	<br>
@@ -54,9 +54,8 @@ $(function () {
 
 	function submitTryit( x )
 	{
-		//console.log( '--------------' );
+		$('#myresultform')[0].value = '';
 		var query = $('#myinputform')[0].value ;
-		console.log( query );
 		$.ajax({
 			dataType: "text",
 			url: "report.json",
