--- a/assets/index.html
+++ b/assets/index.html
@@ -18,11 +18,7 @@
 
     <div id="placeholder" style="width:800px;height:400px;"></div>
 
-    <p>Simple example. You don't need to specify much to get an
-       attractive look. Put in a placeholder, make sure you set its
-       dimensions (otherwise the plot library will barf) and call the
-       plot function with the data. The axes are automatically
-       scaled.</p>
+    <p>Simple example. </p>
 
 
 	<!-- ok, we want to try to load a json file -->
