--- a/assets/report.html
+++ b/assets/report.html
@@ -87,7 +87,7 @@ $(function () {
 
 				// if not prompt for user/ password
 				if( value.authenticated == false )  { 
-					var x = prompt( 'secret key?' );
+					var x = prompt( 'admin password?' );
 
 					// do the login
 					$.ajax({
