--- a/assets/index.html
+++ b/assets/index.html
@@ -14,6 +14,12 @@
 
 	<a href="/report.html">report</a>
 
+	<form action="">
+		ticks: <input type="text" id="myticks"  value="500" ><br>
+	</form>
+
+	<span><input class="submit" type="button" value="Submit" onclick="update_chart()"></span>
+
     <div id="mytime" style="width:100px;height:30px;"></div>
 
     <div id="placeholder" style="width:800px;height:400px;"></div>
@@ -24,30 +30,6 @@
 	<!-- ok, we want to try to load a json file -->
 
 <script type="text/javascript">
-$(function () {
-
-	// how do we get the json data ? - can we specify it in the head.
-	// or does it have to be httprequest from within ?
-
-	// how can i get the file data ?
-	// --  var p = JSON.parse(contact);
-
-	//PlainObject data, String textStatus, jqXHR jqXHR
-
-	//series = nil;
-
-	// http://www.jqueryflottutorial.com/how-to-make-jquery-flot-line-chart.html
-
-	// actually, we ought to be able to request how much data we want as a parameter
-	// and perhaps the tick interval.
-	// scrolling would be nice ...
-
-	// but we really want to be able to add another access.
-	// AHHH even if we can't then we can have two charts.
-	// one on top of the other...
-	// Also getting the 5% bound - almost certainly wants to be put on the same graph.
-
-
 
 
 			 var options = {
@@ -90,11 +72,125 @@ $(function () {
 				}
 			};
 
+
+$(function () {
+
+	// how do we get the json data ? - can we specify it in the head.
+	// or does it have to be httprequest from within ?
+
+	// how can i get the file data ?
+	// --  var p = JSON.parse(contact);
+
+	//PlainObject data, String textStatus, jqXHR jqXHR
+
+	//series = nil;
+
+	// http://www.jqueryflottutorial.com/how-to-make-jquery-flot-line-chart.html
+
+	// actually, we ought to be able to request how much data we want as a parameter
+	// and perhaps the tick interval.
+	// scrolling would be nice ...
+
+	// but we really want to be able to add another access.
+	// AHHH even if we can't then we can have two charts.
+	// one on top of the other...
+	// Also getting the 5% bound - almost certainly wants to be put on the same graph.
+
+
+
+
 		all_series = null;
 
 		graph = null ;
 
 		last_id = -1;
+
+
+	update();
+
+
+
+	//console.log( 'hithere' );
+
+    //var d1 = [];
+    //for (var i = 0; i < 14; i += 0.5)
+     //   d1.push([i, Math.sin(i)]);
+
+    //var d2 = [[0, 3], [4, 8], [8, 5], [9, 13]];
+
+    // a null signifies separate line segments
+    //var d3 = [[0, 13], [7, 13], null, [7, 2.5], [14, 2.5]];
+
+    //$.plot($("#placeholder"), [ d1, d2, d3 ]);
+    //$.plot($("#placeholder"), [ d3 ]);
+});
+
+
+
+	function update_chart() {
+
+		$.ajax({
+			dataType: "json",
+			url: "get_series.json",
+			data: { ticks: $( "#myticks" )[0].value },
+			success: function ( datax, textStatus, jqXHR ) {
+				console.log( 'whoot got data' );
+				//data = [[0, 3], [4, 8], [8, 5], [9, 13]];
+				var all_series = [
+					{
+						label: "top ask",
+						data: datax.map( function(x) {
+								return [ new Date( x.time), x.top_ask ]
+							} ),
+						yaxis: 1
+					},
+					{
+						label: "top bid",
+						data: datax.map( function(x) {
+								return [ new Date( x.time), x.top_bid ]
+							} ),
+						yaxis: 1
+					},
+					{
+						label: "sum ratio",
+						data:
+							datax.map( function(x) {
+								return [ new Date( x.time), x.sum_ratio ]
+							} ),
+						yaxis: 2,
+						//points: { symbol: "circle", fillColor: "#7F7F7F", show: true },
+						lines: { color: "#7F7F7F" }
+					}
+				];
+
+				if( graph == null) {
+					graph = $.plot($("#placeholder"), all_series, options );
+
+					console.log( 'plotting graph')
+				}
+				else {
+					console.log( 'already have graph')
+					graph.setData( all_series );  // Replace oldData with newData
+					graph.setupGrid();       // Adjust axes to match new values
+					graph.draw();            // Update actual plot
+				}
+
+				// now we want to do update this thing
+				x = datax.slice(-1)[0];
+				y = new Date( x.time).toLocaleTimeString()
+				$( "#mytime" ).html( "<p>" + y + "</p>" );
+
+
+
+				last_id = x.id;
+
+			} ,
+			error: function (jqXHR, textStatus, errorThrown ) {
+				console.log(   textStatus  + errorThrown );
+			}
+		});
+
+	}
 
 	function update() {
 
@@ -116,68 +212,8 @@ $(function () {
 				}
 				else {
 					console.log( "require update");
-
-					$.ajax({
-						dataType: "json",
-						url: "get_series.json",
-						//data: "whoot",
-						success: function ( datax, textStatus, jqXHR ) {
-							console.log( 'whoot got data' );
-							//data = [[0, 3], [4, 8], [8, 5], [9, 13]];
-							var all_series = [
-								{
-									label: "top ask",
-									data: datax.map( function(x) {
-											return [ new Date( x.time), x.top_ask ]
-										} ),
-									yaxis: 1
-								},
-								{
-									label: "top bid",
-									data: datax.map( function(x) {
-											return [ new Date( x.time), x.top_bid ]
-										} ),
-									yaxis: 1
-								},
-								{
-									label: "sum ratio",
-									data:
-										datax.map( function(x) {
-											return [ new Date( x.time), x.sum_ratio ]
-										} ),
-									yaxis: 2,
-									//points: { symbol: "circle", fillColor: "#7F7F7F", show: true },
-									lines: { color: "#7F7F7F" }
-								}
-							];
-
-							if( graph == null) {
-								graph = $.plot($("#placeholder"), all_series, options );
-
-								console.log( 'plotting graph')
-							}
-							else {
-								console.log( 'already have graph')
-								graph.setData( all_series );  // Replace oldData with newData
-								graph.setupGrid();       // Adjust axes to match new values
-								graph.draw();            // Update actual plot
-							}
-
-							// now we want to do update this thing
-							x = datax.slice(-1)[0];
-							y = new Date( x.time).toLocaleTimeString()
-							$( "#mytime" ).html( "<p>" + y + "</p>" );
-
-
-
-							last_id = x.id;
-
-						} ,
-						error: function (jqXHR, textStatus, errorThrown ) {
-							console.log(   textStatus  + errorThrown );
-						}
-					});
-
+			
+					update_chart();
 
 
 				}
@@ -187,29 +223,12 @@ $(function () {
 
 
 
-
+		// this shouldn't be here
 
 		setTimeout(update, 10 * 1000 );
 	}
 
-	update();
 
-
-
-	//console.log( 'hithere' );
-
-    //var d1 = [];
-    //for (var i = 0; i < 14; i += 0.5)
-     //   d1.push([i, Math.sin(i)]);
-
-    //var d2 = [[0, 3], [4, 8], [8, 5], [9, 13]];
-
-    // a null signifies separate line segments
-    //var d3 = [[0, 13], [7, 13], null, [7, 2.5], [14, 2.5]];
-
-    //$.plot($("#placeholder"), [ d1, d2, d3 ]);
-    //$.plot($("#placeholder"), [ d3 ]);
-});
 </script>
 
  </body>
