--- a/assets/index.html
+++ b/assets/index.html
@@ -77,7 +77,7 @@
     all_series = null;
     graph = null ;
     last_id = -1;
-    update();
+  continuous_update();
   });
 
   function update_chart() {
@@ -94,14 +94,14 @@
             label: "top ask",
             data: datax.map( function(x) {
                 return [ new Date( x.time), x.top_ask ]
-              } ),
+            }),
             yaxis: 1
           },
           {
             label: "top bid",
             data: datax.map( function(x) {
                 return [ new Date( x.time), x.top_bid ]
-              } ),
+            }),
             yaxis: 1
           },
           {
@@ -109,7 +109,7 @@
             data:
               datax.map( function(x) {
                 return [ new Date( x.time), x.sum_ratio ]
-              } ),
+            }),
             yaxis: 2,
             //points: { symbol: "circle", fillColor: "#7F7F7F", show: true },
             lines: { color: "#7F7F7F" }
@@ -141,7 +141,7 @@
     });
   }
 
-  function update() {
+  function continuous_update() {
     console.log('calling update');
     $.ajax({
       dataType: "json",
@@ -158,7 +158,7 @@
         }
       }
     );
-    setTimeout(update, 10 * 1000 );
+    setTimeout(continuous_update, 10 * 1000 );
   }
 
 
