--- a/assets/index.html
+++ b/assets/index.html
@@ -111,7 +111,7 @@
  
     $.ajax({
       dataType: "json",
-      url: "get_single_series.json",
+      url: "get_series.json",
       data: { 
         ticks: $( "#myticks" )[0].value, 
         name: series_name_
