--- a/assets/index.html
+++ b/assets/index.html
@@ -75,10 +75,10 @@
 
   $(function () {
     // start
-    all_series = null;
+    all_series = [];
     graph = null ;
     last_id = -1;
-    continuous_update();
+//    continuous_update();
 
   });
 
@@ -119,7 +119,7 @@
       success: function ( datax, textStatus, jqXHR ) {
         // ok, 
         console.log( 'whoot got series!!! ' + series_name_ );
-        new_series = [
+        new_series = 
           {
             series_name: series_name_, 
             color: "red", 
@@ -130,7 +130,20 @@
             }),
             yaxis: 1
           }
-        ]
+      
+        // ok, it's getting added maybe? but only the title is getting drawn, which is confusing. 
+ 
+        console.log( 'data length size ' + new_series.data.length  )
+        console.log( JSON.stringify( new_series.data ) )
+
+        console.log( 'all_series.length ' + all_series.length );
+        all_series.push( new_series );
+        console.log( 'all_series.length ' + all_series.length );
+
+        refresh_chart_data();
+
+        console.log( new_series );
+  
         // now we should find and replace the series with a new one
         // and then call chart update 
       },
@@ -141,7 +154,21 @@
   }
 
 
-
+  function refresh_chart_data() { 
+    // rather than lexically bind everything - should use param
+    // factor this into a function ...
+    // actually we should even pass the all_series as an argument
+    if( graph == null) {
+      graph = $.plot($("#placeholder"), all_series, options );
+      console.log( 'plotting graph')
+    }
+    else {
+      console.log( 'already have graph')
+      graph.setData( all_series );  // Replace oldData with newData
+      graph.setupGrid();       // Adjust axes to match new values
+      graph.draw();            // Update actual plot
+    }
+  }
 
   function update_chart() {
     $.ajax({
@@ -152,14 +179,14 @@
         // ok, 
         console.log( 'whoot got data' );
         all_series = [
-          {
+          /*{
             color: "red", 
             label: "top ask",
             data: datax.map( function(x) {
               return [ new Date( x.time), x.top_ask ]
             }),
             yaxis: 1
-          },
+          },*/
           {
             label: "top bid",
             data: datax.map( function(x) {
@@ -175,17 +202,9 @@
             yaxis: 2
           }
         ];
-        if( graph == null) {
-          graph = $.plot($("#placeholder"), all_series, options );
-          console.log( 'plotting graph')
-        }
-        else {
-          console.log( 'already have graph')
-          graph.setData( all_series );  // Replace oldData with newData
-          graph.setupGrid();       // Adjust axes to match new values
-          graph.draw();            // Update actual plot
-        }
-        // now we want to do update this thing
+        refresh_chart_data( );
+
+                // now we want to do update this thing
         x = datax.slice(-1)[0];
         y = new Date( x.time).toLocaleTimeString();
         $( "#mytime" ).html( "<p>" + y + "</p>" );
