lookup series dynamically

--- a/assets/index.html
+++ b/assets/index.html
@@ -81,8 +81,8 @@
 //    continuous_update();
 
 
-    get_series('bitstamp.topask'); 
-    get_series('bitstamp.topbid'); 
+    get_series('bitstamp.top_ask'); 
+    get_series('bitstamp.top_bid'); 
 
     continuous_update();
   });
