--- a/assets/index.html
+++ b/assets/index.html
@@ -80,8 +80,10 @@
     last_id = -1;
 //    continuous_update();
 
+//    get_series( 'btcmarkets.top_bid' );
+ //   get_series( 'btcmarkets.top_ask' );
 
-    get_series('bitstamp.top_ask'); 
+  //  get_series('bitstamp.top_ask'); 
     get_series('bitstamp.top_bid'); 
 
     continuous_update();
