--- a/assets/index.html
+++ b/assets/index.html
@@ -83,7 +83,7 @@
 //    get_series( 'btcmarkets.top_bid' );
  //   get_series( 'btcmarkets.top_ask' );
 
-  //  get_series('bitstamp.top_ask'); 
+    get_series('bitstamp.top_ask'); 
     get_series('bitstamp.top_bid'); 
 
     continuous_update();
