--- a/assets/index.html
+++ b/assets/index.html
@@ -80,11 +80,11 @@
     last_id = -1;
 //    continuous_update();
 
-    get_series( 'btcmarkets.top_bid' );
-   get_series( 'btcmarkets.top_ask' );
+   // get_series( 'btcmarkets.top_bid' );
+   //get_series( 'btcmarkets.top_ask' );
 
-//    get_series('bitstamp.top_ask'); 
- //   get_series('bitstamp.top_bid'); 
+    get_series('bitstamp.top_ask'); 
+    get_series('bitstamp.top_bid'); 
 
     continuous_update();
   });
@@ -167,6 +167,11 @@
             }),
             yaxis: 1
         };
+
+        // need to update validity
+        // new_series.data.
+        // new_series.data[ new_series.data.length - 1][0 ] 
+
         merge_series( new_series ); 
         refresh_chart_data();
       },
